DRILL-2944: Update drill-env to set fixed heap and use G1 garbage collection to reduce GC overhead.